Moved constatnts into their own class.