@@ -1,10 +1,10 @@
 package com.incquerylabs.onetoonelatencytest.arrowheaddirect;
 
 import java.io.BufferedReader;
-import java.io.DataOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.PrintWriter;
 import java.net.Socket;
 import java.net.UnknownHostException;
 import java.nio.file.Files;
@@ -16,6 +16,7 @@ import java.util.Set;
 
 import javax.ws.rs.core.Response;
 
+import com.incquerylabs.onetoonelatencytest.Constants;
 import com.incquerylabs.onetoonelatencytest.Sender;
 
 import eu.arrowhead.client.common.Utility;
@@ -27,10 +28,7 @@ import eu.arrowhead.client.common.model.ServiceRequestForm;
 
 public class ArrowheadDirectSend implements Sender {
 
-	public static final String ORCH_IP = "127.0.0.1";
-	public static final int ORCH_PORT = 8440;
-	public static final String SERVICE_NAME = "conptest";
-	public static final String INTERFACE = "TCP";
+	private static final String OR_PATH = "orchestrator/orchestration";
 	ArrowheadSystem provider = null;
 	Socket socket = null;
 	Map<Integer, Instant> times = new HashMap<Integer, Instant>();
@@ -38,12 +36,12 @@ public class ArrowheadDirectSend implements Sender {
 	@Override
 	public void send(int n, File file) {
 		if (provider == null) {
-			String orchUri = Utility.getUri(ORCH_IP, ORCH_PORT, "orchestrator/orchestration", false, false);
+			String orchUri = Utility.getUri(Constants.ARROWHEAD_ORCHESTRATOR_IP, Constants.ARROWHEAD_ORCHESTRATOR_PORT, OR_PATH, false, false);
 			ArrowheadSystem me = new ArrowheadSystem("ArrowheadDirectSender", "0.0.0.0", 1, null);
 			Set<String> interfaces = new HashSet<String>();
-			interfaces.add(INTERFACE);
+			interfaces.add(Constants.ARROWHEAD_INTERFACE_NAME);
 			Map<String, String> serviceMetadata = new HashMap<String, String>();
-			ArrowheadService service = new ArrowheadService(SERVICE_NAME, interfaces, serviceMetadata);
+			ArrowheadService service = new ArrowheadService(Constants.ARROWHEAD_SERVICE_NAME, interfaces, serviceMetadata);
 			Map<String, Boolean> flags = new HashMap<String, Boolean>();
 			flags.put("overrideStore", true);
 			ServiceRequestForm srf = new ServiceRequestForm.Builder(me).requestedService(service)
@@ -56,13 +54,15 @@ public class ArrowheadDirectSend implements Sender {
 		}
 		try {
 			socket = new Socket(provider.getAddress(), provider.getPort());
-			byte[] bytes = Files.readAllBytes(file.toPath());
-			DataOutputStream out = new DataOutputStream(socket.getOutputStream());
+			String bytes = Files.readString(file.toPath());
+			PrintWriter out = new PrintWriter(socket.getOutputStream());
 			BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 			times.put(0, Instant.now());
 			for (int i = 0; i < n; ++i) {
 				System.out.println("Start sending message " + (i + 1));
-				out.write(bytes);
+				out.println(bytes);
+				System.out.println("send end");
+				out.println("=====");
 				in.readLine();
 				times.put(Integer.valueOf(i + 1), Instant.now());
 				try {
